<resources>
    <string name="app_name">PTIT Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cập nhập dữ liệu</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="hoc_phi">Học phí</string>
    <string name="mon_no">Môn nợ</string>
    <string name="lich_hoc">Lịch học</string>
    <string name="bang_diem">Bảng điểm</string>
    <string name="du_kien_hoc">Dự kiến học</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="so_tin_chi_no">Số tín chỉ nợ:</string>
    <string name="so_tin_chi_tich_luy">Số tín chỉ tích lũy:</string>
    <string name="title_activity_login">Đăng nhập</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_tkqldt">Tài khoản QLDT</string>
    <string name="title_activity_bang_diem">Bảng điểm</string>
    <string name="title_activity_mon_no">Môn nợ</string>
    <string name="title_activity_tkb">Thời khóa biểu</string>
    <string name="title_activity_hocphi">Học phí</string>
    <string name="title_activity_dukien">Dự kiến - Mục tiêu</string>
    <string name="lich_thi">Lịch thi</string>
    <string name="title_activity_thoigianthi">Lịch thi</string>

</resources>
